--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/cache@v4
       with:
         path: ~/go/bin/golangci-lint
-        key: ${{ runner.os }}-golangci-lint-v1.54.2
+        key: ${{ runner.os }}-golangci-lint
 
     - name: Test
       run: |
