manual CI/CD take 4

--- a/.github/workflows/trybot.yml
+++ b/.github/workflows/trybot.yml
@@ -1,67 +1,22 @@
-name: TryBot (re-run PR checks)
+name: TryBot
 
 on:
   issue_comment:
     types: [created]
+  pull_request_target:
+    types: [labeled]
 
 permissions:
   contents: read
   pull-requests: read
-  actions: write
+  issues: write      # to add/remove the label
+
+concurrency:
+  group: trybot-${{ github.event_name == 'pull_request_target' && github.event.pull_request.number || github.event.issue.number }}
+  cancel-in-progress: true
 
 jobs:
-  rerun:
-    if: github.event.issue.pull_request != null
-    runs-on: ubuntu-latest
-
-    steps:
-      - id: gate
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const body = (context.payload.comment.body || '');
-            const okPhrase = /trybot\+1/i.test(body);
-            const allowed = ['MEMBER','OWNER','COLLABORATOR']
-              .includes(context.payload.comment.author_association);
-            core.setOutput('ok', okPhrase && allowed ? 'true' : 'false');
-
-      - name: Re-run existing PR workflows
-        if: steps.gate.outputs.ok == 'true'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { owner, repo } = context.repo;
-            const prNumber = context.payload.issue.number;
-
-            // Get PR head commit
-            const { data: pr } = await github.rest.pulls.get({ owner, repo, pull_number: prNumber });
-            const headSha = pr.head.sha;
-
-            // Find workflow runs tied to this head SHA (PR or PR_TARGET)
-            const events = ['pull_request', 'pull_request_target'];
-            let runs = [];
-            for (const event of events) {
-              const page = await github.paginate(
-                github.rest.actions.listWorkflowRunsForRepo,
-                { owner, repo, event, per_page: 100 }
-              );
-              runs.push(...page.filter(r => r.head_sha === headSha));
-            }
-
-            if (runs.length === 0) {
-              core.info(`No existing workflow runs found for head_sha=${headSha}. Nothing to re-run.`);
-              return;
-            }
-
-            // Re-run completed runs (skips any still in_progress/queued)
-            for (const run of runs) {
-              core.info(`Considering run id=${run.id} name="${run.name}" status=${run.status} conclusion=${run.conclusion}`);
-              if (run.status !== 'completed') {
-                core.info(`Skipping run ${run.id} because status=${run.status}`);
-                continue;
-              }
-              await github.request('POST /repos/{owner}/{repo}/actions/runs/{run_id}/rerun', {
-                owner, repo, run_id: run.id
-              });
-              core.info(`Re-run requested for run id=${run.id}`);
-            }
+  run_ci:
+    if: github.event_name == 'pull_request_target' &&
+        contains(join(github.event.pull_request.labels.*.name), 'trybot')
+    uses: ./.github/workflows/go.yml
