--- a/.github/workflows/trybot.yml
+++ b/.github/workflows/trybot.yml
@@ -4,12 +4,11 @@ on:
   issue_comment:
     types: [created]
   pull_request_target:
-    types: [labeled]
+    types: [edited]
 
 permissions:
   contents: read
-  pull-requests: read
-  issues: write      # to add/remove the label
+  pull-requests: write
 
 concurrency:
   group: trybot-${{ github.event_name == 'pull_request_target' && github.event.pull_request.number || github.event.issue.number }}
@@ -25,24 +24,31 @@ jobs:
         with:
           script: |
             const body = context.payload.comment.body || '';
-            const ok = /trybot\+1/i.test(body) &&
-              ['MEMBER','OWNER','COLLABORATOR'].includes(context.payload.comment.author_association);
+            const allowed = ['MEMBER','OWNER','COLLABORATOR']
+              .includes(context.payload.comment.author_association);
+            const ok = /trybot\+1/i.test(body) && allowed;
             core.setOutput('ok', ok ? 'true' : 'false');
 
-      - name: Bounce "trybot" label to trigger PR job
+      - name: Append trybot ping to PR body (no PAT, no labels)
         if: steps.gate.outputs.ok == 'true'
         uses: actions/github-script@v7
         with:
           script: |
             const { owner, repo } = context.repo;
-            const issue_number = context.payload.issue.number;
-            const name = 'trybot';
-            try { await github.rest.issues.getLabel({ owner, repo, name }); }
-            catch { await github.rest.issues.createLabel({ owner, repo, name, color: 'BFD4F2' }); }
-            try { await github.rest.issues.removeLabel({ owner, repo, issue_number, name }); } catch {}
-            await github.rest.issues.addLabels({ owner, repo, issue_number, labels: [name] });
+            const prNumber = context.payload.issue.number;
+            const { data: pr } = await github.rest.pulls.get({ owner, repo, pull_number: prNumber });
+            const prev = pr.body || '';
+            const stamp = Date.now();
+            const ping  = `<!-- trybot-ping:${stamp} -->`;
+            const next  = prev + "\n" + ping;
+            await github.rest.pulls.update({ owner, repo, pull_number: prNumber, body: next });
+            core.info(`Added ${ping}`);
 
   run_ci:
-    if: github.event_name == 'pull_request_target' &&
-        contains(join(github.event.pull_request.labels.*.name), 'trybot')
+    if: >
+      github.event_name == 'pull_request_target' &&
+      github.event.action == 'edited' &&
+      github.event.changes.body != null &&
+      contains(github.event.pull_request.body, '<!-- trybot-ping:') &&
+      !contains(github.event.changes.body.from, '<!-- trybot-ping:')
     uses: ./.github/workflows/go.yml
